--- a/POC/RinglandDriver/RinglandDriver.vcxproj.filters
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ntos.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
