added berkeley sockets

--- a/POC/RinglandDriver/RinglandDriver.vcxproj.filters
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj.filters
@@ -17,6 +17,9 @@
       <UniqueIdentifier>{8E41214B-6785-4CFE-B992-037D68949A14}</UniqueIdentifier>
       <Extensions>inf;inv;inx;mof;mc;</Extensions>
     </Filter>
+    <Filter Include="ksocket">
+      <UniqueIdentifier>{99e982a3-6cb9-40fd-8259-891799f59e3d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Inf Include="RinglandDriver.inf">
@@ -24,7 +27,13 @@
     </Inf>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="ksocket\berkeley.c">
+      <Filter>ksocket</Filter>
+    </ClCompile>
+    <ClCompile Include="ksocket\ksocket.c">
+      <Filter>ksocket</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -33,6 +42,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ntos.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ksocket\ksocket.h">
+      <Filter>ksocket</Filter>
+    </ClInclude>
+    <ClInclude Include="ksocket\berkeley.h">
+      <Filter>ksocket</Filter>
+    </ClInclude>
+    <ClInclude Include="stdint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sockets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
