--- a/POC/RinglandDriver/RinglandDriver.vcxproj
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj
@@ -166,14 +166,18 @@
     <ClCompile Include="ksocket\berkeley.c" />
     <ClCompile Include="ksocket\ksocket.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="packet_handler.cpp" />
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="imports.h" />
     <ClInclude Include="ksocket\berkeley.h" />
     <ClInclude Include="ksocket\ksocket.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="ntos.h" />
+    <ClInclude Include="packet_handler.h" />
     <ClInclude Include="server.h" />
+    <ClInclude Include="shared_structs.h" />
     <ClInclude Include="sockets.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stdint.h" />
