--- a/POC/RinglandDriver/RinglandDriver.vcxproj
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj
@@ -163,6 +163,7 @@
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="globals.cpp" />
     <ClCompile Include="ksocket\berkeley.c" />
     <ClCompile Include="ksocket\ksocket.c" />
     <ClCompile Include="main.cpp" />
@@ -170,6 +171,7 @@
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="globals.h" />
     <ClInclude Include="imports.h" />
     <ClInclude Include="ksocket\berkeley.h" />
     <ClInclude Include="ksocket\ksocket.h" />
