--- a/POC/MMap/MMap.vcxproj
+++ b/POC/MMap/MMap.vcxproj
@@ -143,12 +143,16 @@
     <ClCompile Include="driver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mmap.cpp" />
+    <ClCompile Include="usermode_proc_handler.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\RinglandDriver\shared_structs.h" />
     <ClInclude Include="driver.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="mmap.h" />
+    <ClInclude Include="process_handler.h" />
+    <ClInclude Include="usermode_proc_handler.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
