cant get IAT hooking to work, gonna try APC

--- a/POC/RinglandDriver/RinglandDriver.vcxproj
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj
@@ -150,6 +150,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <BufferSecurityCheck>false</BufferSecurityCheck>
+      <ShowIncludes>true</ShowIncludes>
     </ClCompile>
     <Link>
       <EntryPointSymbol>DriverEntry</EntryPointSymbol>
