--- a/POC/RinglandDriver/RinglandDriver.vcxproj
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <ShowIncludes>true</ShowIncludes>
+      <WarningLevel>Level3</WarningLevel>
     </ClCompile>
     <Link>
       <EntryPointSymbol>DriverEntry</EntryPointSymbol>
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="globals.cpp" />
+    <ClCompile Include="krnlhelper.cpp" />
     <ClCompile Include="ksocket\berkeley.c" />
     <ClCompile Include="ksocket\ksocket.c" />
     <ClCompile Include="main.cpp" />
@@ -174,6 +176,7 @@
   <ItemGroup>
     <ClInclude Include="globals.h" />
     <ClInclude Include="imports.h" />
+    <ClInclude Include="krnlhelper.h" />
     <ClInclude Include="ksocket\berkeley.h" />
     <ClInclude Include="ksocket\ksocket.h" />
     <ClInclude Include="log.h" />
