--- a/POC/RinglandDriver/RinglandDriver.vcxproj.filters
+++ b/POC/RinglandDriver/RinglandDriver.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="krnlhelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="krnlhelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
