i've been led on a wild goose chase by API sets, and i'm deeply upset with myself for failing to realise the root cause was not API sets, but template<typename... Args>. Also, added API set solving so that DLLs dont need to be statically linked

--- a/POC/ExampleDll/ExampleDll.vcxproj.filters
+++ b/POC/ExampleDll/ExampleDll.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="monofuncs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hwid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="monofuncs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hwid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
