--- a/POC/MMap/MMap.vcxproj.filters
+++ b/POC/MMap/MMap.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="drvhelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="apiset.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mmap.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="drvhelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="apiset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
